--- a/README
+++ b/README
@@ -69,3 +69,12 @@ these additional notices to be distributed.  License copyright years may be
 listed using range notation, e.g., 1996-2015, indicating that every year in
 the range, inclusive, is a copyrightable year that would otherwise be listed
 individually.
+
+# ZZZ: dliopen
+
+this repo contains the changes that are needed for `dliopen` to work. There
+are several comments starting with `ZZZ: ` in the code to explain how things
+work and why they work as they do. Moreover, the added functions have `_zzz`
+in their names so that debugging becomes easier if a binary crashes within
+the functions I've defined. I also use `(ZZZ) ...` in debugging messages
+that are printed when `LD_DEBUG=...` is set.
